assets/css/main.scss
/* ... */
/*-----Cookie consent banner-----*/

.cookiealert {
    position: fixed;
    background-color: $footer-bg;
    color: $footer-color;
    bottom: 0;
    left: 0;
    width: 100%;
    margin: 0 !important;
    z-index: 1071;
    opacity: 0;
    visibility: hidden;
    transform: translateY(100%);
    transition: all 500ms ease-out;

    a {
        color: $footer-link-color !important;
    }

    a:hover {
        color: $footer-link-color-hover !important;
    }
}

.cookiealert.show {
    opacity: 1;
    visibility: visible;
    transform: translateY(0%);
    transition-delay: 1000ms;
}

/*-----Tools-----*/

.tool {
    cursor: pointer;
    white-space: nowrap;
    color: $link-color;
    background-color: rgba($link-color, 0.05);
    border-radius: $border-radius;
    padding: 0.1rem 0.25rem;

    &:hover {
        text-decoration: none !important;
        color: $primary;
    }
}

.popover-tool {
    max-width: 20rem;

    h5 {
        font-weight: bold;
    }
}

/*-----Hoover classes-----*/

.hover-primary:hover,
.hover-primary:focus {
    background-color: $btn-primary-bg-hover !important;
    transition: $btn-transition;
    color: $btn-primary-color-hover !important;
}

.text-hover-primary:hover,
.text-hover-primary:focus {
    transition: $btn-transition;
    color: $primary !important;
}

/*-----Affiliation sizes-----*/

.affiliation-img-sm {
    height: 24px;
}

.affiliation-img {
    height: 60px;
}

.affiliation-flag {
    width: 60px;
}

.affiliation-flag .ratio {
    width: 40px;
}

/*-----News and events-----*/

li.upcoming_event,
li.past_event,
.events {
    display: none;
}

.events > ul > li,
.news > ul > li {
    border-left: $news-border-color 5px solid;
    border-radius: $border-radius;
    padding: 0px 11px;

    i {
        width: 20px;
        text-align: center;
    }

    .title {
        background-color: $news-title-bg;
        font-weight: 600;
        color: $news-title-color;
        padding: 0px 11px;
        border-radius: 0px 4px 4px 0px;
        margin-left: -11px;
        display: inline-block;
    }

    .full-description > *:last-child {
        margin-bottom: 0;

        li {
            margin-bottom: 0;
        }
    }
}

/*-----More information tiles-----*/

.info-collapse {
    transition: border-color 0.2s ease-in-out;

    &:first-of-type {
        margin-top: $spacer * 4;
    }

    .h2-small {
        font-size: 1.5em;
    }

    i {
        transition-property: margin-right, transform;
        transition-duration: 0.2s;
        transition-timing-function: ease-in-out;
        margin-right: $spacer;
    }

    &[aria-expanded="true"] {
        border-color: color.scale($border-color, $lightness: -30%) !important;
        i {
            transform: rotate(180deg);
        }
    }
    &:hover {
        border-color: color.scale($border-color, $lightness: -30%) !important;
        h2 {
            color: color.scale($primary, $lightness: -20%) !important;
        }
        i {
            color: color.scale($link-color, $lightness: -20%) !important;
        }
    }
}

.info-card {
    .info-logo {
        max-width: 250px;
        max-height: 40px;
    }

    // Do not show border on last row tools table
    .tooltable tbody tr:last-of-type {
        border-bottom-color: transparent;
    }

    .info-links {
        a.btn {
            background-color: $info-card-bg;
            color: $info-card-color;
            i {
                transition: $btn-transition;
                color: $info-card-color !important;
            }
            &:hover {
                background-color: $info-card-bg-hover;
                color: $info-card-color-hover !important;
                i {
                    color: $info-card-color-hover !important;
                }
            }
        }

        img {
            height: 30px;
            max-width: 35px;
        }
    }
}

/*-----Country flags-----*/

.flag-icon {
    border-radius: 3px;
    background-size: cover;
}

/*-----Section navigation tiles-----*/
$nav-card-bg: $light;
$nav-card-color: $dark;
$nav-card-bg-hover: $primary;
$nav-card-color-hover: $white;

.navigation-tiles {
    .card,
    .btn {
        background-color: $nav-card-bg;
        color: $nav-card-color;
        transition: $btn-transition;
        &:hover {
            background-color: $nav-card-bg-hover;
            color: $nav-card-color-hover;
            a.section-title {
                text-decoration: none;
                transition: $btn-transition;
                color: $nav-card-color-hover;
            }
        }

        a {
            &:not(.stretched-link),
            button:not(.stretched-link) {
                z-index: 2;
                position: relative;
            }

            &.section-title {
                color: $nav-card-color;
                font-size: 1.2rem;
            }
        }
        .type-icon {
            height: 1.2rem;
        }
    }
}

/*-----Scaling presentations and videos-----*/

iframe.scale {
    height: 500px;
    width: 100%;
    margin: 40px 0;
}

@import "custom_classes";

